--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="calculator">
-    <h2>Riwaj Calculator</h2>
+    <h2>Riwaj's Calculator</h2>
 
     <input type="number" id="num1" placeholder="Number 1">
     <input type="number" id="num2" placeholder="Number 2">
